# ESTER

./: .gitignore  LICENSE  README.md
ester_common/: CMakeLists.txt  package.xml
ester_common/include/ester_common/: ester_enums.hpp
ester_common/include/ester_common/logging/: file_logger.hpp
ester_common/src/ester_common/logging/: file_logger.cpp
ester_description/: CMakeLists.txt  package.xml
ester_description/meshes/head/: skull.stl
ester_description/meshes/leg/: front_hip_aa.stl  front_hip_fe.stl  front_lower_leg.stl  front_upper_leg.stl  rear_hip_fe.stl  rear_left_hip_aa.stl  rear_lower_leg.stl  rear_upper_leg.stl
ester_description/meshes/spine/: front_spine_pitch.stl  front_spine_yaw.stl  rear_spine_pitch.stl  rear_spine_yaw.stl  spine_center.stl
ester_description/urdf/: constants.xacro  ester.urdf  ester.urdf.xacro  gazebo.urdf.xacro
ester_description/urdf/head/: head.urdf.xacro
ester_description/urdf/leg/: foot_contact.urdf.xacro  front_left_leg.urdf  front_left_leg.urdf.xacro  front_right_leg.urdf  front_right_leg.urdf.xacro  hip_aa.urdf.xacro  hip_fe.transmission.xacro  hip_fe.urdf.xacro  leg.urdf.xacro  lower_leg.transmission.xacro  lower_leg.urdf.xacro  rear_left_leg.urdf  rear_left_leg.urdf.xacro  rear_right_leg.urdf  (+3 more)
ester_kinematics/: CMakeLists.txt  package.xml  setup.py
ester_kinematics/include/ester_kinematics/: force_visualiser.hpp  inertia_calculator.hpp  leg_controller.hpp  leg_dynamics.hpp  load_robot_model.hpp  robot_joint_controller.hpp  robot_model.hpp  spine_kinematics.hpp
ester_kinematics/python/src/ester_kinematics/: hybrid_optimise_ik.py  ik_utils.py  leg_kinematics.py  map_joint_states_to_ik_joints.py  parallel_kinematics.py  parallel_leg_kinematics.py
ester_kinematics/scripts/: test_kinematics.py
ester_kinematics/src/: force_applied_urdf_minimum_test.cpp  full_robot_balance_test.cpp  read_robot_urdf_inertia.cpp  test_dynamics.cpp
ester_kinematics/src/ester_kinematics/: force_visualiser.cpp  inertia_calculator.cpp  leg_controller.cpp  leg_dynamics.cpp  robot_joint_controller.cpp  robot_model.cpp  spine_kinematics.cpp
ester_kinematics/src/ester_kinematics/ikfast/: ikfast_front_left_translation.cpp  ikfast_front_right_translation.cpp  ikfast_rear_left_translation.cpp  ikfast_rear_right_translation.cpp
ester_kinematics/tests/: run_all_tests.cpp  test_dynamics.cpp  test_inertia_calculations.cpp  test_leg_controller.cpp  test_robot_joint_controller.cpp  test_robot_model.cpp  test_spine_kinematics.cpp  test_utils.hpp
ester_mpc/: CMakeLists.txt  package.xml  setup.py
ester_mpc/config/: ekf_odom_to_base_link.yaml  mpc.yaml
ester_mpc/include/ester_mpc/: gait_manager.hpp  grf_visualiser.hpp  mpc_base.hpp  mpc_manager.hpp  spine_trajectory_generator.hpp  srbd_mpc.hpp  trajectories.hpp  trajectory_planner.hpp  trajectory_visualiser.hpp
ester_mpc/include/ester_mpc/world_nodes/: replay_world_osg.hpp  spine_trajectory_cot_world.hpp  spine_trajectory_optimise_world.hpp
ester_mpc/launch/: find_cot.launch  optimise_spine_trajectory.launch
ester_mpc/scripts/: check_robot_inertia.py  test_do_mpc.py
ester_mpc/src/: find_cots.cpp  optimise_spine_trajectory.cpp
ester_mpc/src/ester_mpc/: gait_manager.cpp  grf_visualiser.cpp  mpc_base.cpp  mpc_manager.cpp  spine_trajectory_generator.cpp  srbd_mpc.cpp  trajectory_planner.cpp  trajectory_visualiser.cpp
ester_mpc/src/ester_mpc/world_nodes/: replay_world_osg.cpp  spine_trajectory_cot_world.cpp  spine_trajectory_optimise_world.cpp
ester_mpc/tests/: P.txt  test_srbd.cpp  test_srbd.test
experiments/: make_videos.sh  plot_ethological.py  process_simulation_data.py
experiments/cot_experiments/: plot_data.py
experiments/raw_data/: trot_0.15_fixed_fixed_fixed_fixed__2024-09-19-14-22-04.csv  trot_0.15_foot_foot_foot_foot__2024-09-19-14-22-04.csv  trot_0.15_opt_time_time_time_time__2024-09-19-14-21-57.csv  trot_0.15_real_dog_time_time_time_time__2024-09-19-14-22-09.csv  trot_0.15_stiff_stiff_stiff_stiff__2024-09-19-14-22-06.csv  trot_0.1_fixed_fixed_fixed_fixed__2024-09-19-14-21-21.csv  trot_0.1_foot_foot_foot_foot__2024-09-19-14-21-21.csv  trot_0.1_opt_time_time_time_time__2024-09-19-14-21-18.csv  trot_0.1_real_dog_time_time_time_time__2024-09-19-14-21-26.csv  trot_0.1_stiff_stiff_stiff_stiff__2024-09-19-14-21-25.csv  trot_0.25_fixed_fixed_fixed_fixed__2024-09-19-14-23-21.csv  trot_0.25_foot_foot_foot_foot__2024-09-19-14-23-31.csv  trot_0.25_opt_time_time_time_time__2024-09-19-14-23-24.csv  trot_0.25_real_dog_time_time_time_time__2024-09-19-14-23-34.csv  trot_0.25_stiff_stiff_stiff_stiff__2024-09-19-14-23-30.csv  trot_0.2_fixed_fixed_fixed_fixed__2024-09-19-14-22-43.csv  trot_0.2_foot_foot_foot_foot__2024-09-19-14-22-45.csv  trot_0.2_opt_time_time_time_time__2024-09-19-14-22-41.csv  trot_0.2_real_dog_time_time_time_time__2024-09-19-14-22-51.csv  trot_0.2_stiff_stiff_stiff_stiff__2024-09-19-14-22-49.csv  trot_0.35_fixed_fixed_fixed_fixed__2024-09-19-14-24-48.csv  trot_0.35_foot_foot_foot_foot__2024-09-19-14-24-57.csv  trot_0.35_opt_time_time_time_time__2024-09-19-14-24-47.csv  trot_0.35_real_dog_time_time_time_time__2024-09-19-14-25-08.csv  trot_0.35_stiff_stiff_stiff_stiff__2024-09-19-14-25-00.csv  trot_0.3_fixed_fixed_fixed_fixed__2024-09-19-14-24-03.csv  trot_0.3_foot_foot_foot_foot__2024-09-19-14-24-14.csv  trot_0.3_opt_time_time_time_time__2024-09-19-14-24-03.csv  trot_0.3_real_dog_time_time_time_time__2024-09-19-14-24-22.csv  trot_0.3_stiff_stiff_stiff_stiff__2024-09-19-14-24-13.csv  trot_0.45_fixed_fixed_fixed_fixed__2024-09-19-14-26-17.csv  trot_0.45_foot_foot_foot_foot__2024-09-19-14-26-38.csv  trot_0.45_opt_time_time_time_time__2024-09-19-14-26-22.csv  trot_0.45_real_dog_time_time_time_time__2024-09-19-14-26-22.csv  trot_0.45_stiff_stiff_stiff_stiff__2024-09-19-14-26-18.csv  trot_0.4_fixed_fixed_fixed_fixed__2024-09-19-14-25-31.csv  trot_0.4_foot_foot_foot_foot__2024-09-19-14-25-48.csv  trot_0.4_opt_time_time_time_time__2024-09-19-14-25-35.csv  trot_0.4_real_dog_time_time_time_time__2024-09-19-14-25-46.csv  trot_0.4_stiff_stiff_stiff_stiff__2024-09-19-14-25-43.csv  (+225 more)
(+9 files in other folders)
