<?xml version="1.0"?>
<package format="2">
  <name>ester_common</name>
  <version>0.0.0</version>
  <description>The ester_common package</description>

  <maintainer email="nick@todo.todo">nick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
</package>
