<?xml version="1.0"?>
<package format="2">
  <name>ester_mpc</name>
  <version>0.0.0</version>
  <description>The ester_mpc package</description>

  <maintainer email="nick@todo.todo">nick</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sophus</depend>
  <depend>xmlrpcpp</depend>
  <depend>ester_common</depend>
  <depend>ester_kinematics</depend>
  <depend>eigen_conversions</depend>
  <test_depend>rostest</test_depend>
</package>
